--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,17 @@ dependencies:
   badges: ^2.0.1
   #滚动图形
   flutter_card_swipper: ^0.4.0
+  #app图标
+  flutter_launcher_icons: "^0.9.1" 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "static/logo.png"
 
 dev_dependencies:
   flutter_test:
